[+] [admin media] Indique le nombre Maximum de fichiers téléversable en un seul jet (number of files per upload + langues) (sudwebdesign)
[+] [admin] Typo L_CONFIG_ADVANCED_USERFOLDERS : ce réglage est destiné qu'aux rédacteurs du site. (sudwebdesign)
[+] [theme defaut révisé] theme.css, entête et le menu fonctionne avec de nombreux plugins (sudwebdesign)
[+] Hook : plxAdminEditUsersBegin : class.plx.admin.php : editUsers() : avec if() return;
[+] auth.php 7 Hook plugins
AdminAuthBegin
AdminAuthTopLostPassword
AdminAuthLostPassword
AdminAuthTopChangePassword
AdminAuthChangePassword
AdminAuthTopChangePasswordError
AdminAuthChangePasswordError



[+] PluCSS 1.3.1
[+] Feature "Mot de passe oublié" : envoi d'un lien par mail permettant la création d'un nouveau mot de passe (P3ter)
[+] Feature "Mot de passe oublié" : l'adresse e-mail devient obligatoire à l'installation de PluXml et à la création d'un utilisateur (P3ter)
[+] Ajout de la translitteration des URLs des articles, des pages et des médias pour le Russe, le Polonais, le Roumain et l'Allemand (bazooka07, P3ter)
[+] Amélioration des performances du gestionnaire de médias (bazooka07)
[+] Thème par défaut : ajout du titre et du sous-titre sur mobile (P3ter)
[+] Ajout de la fonction plxUtils::printInputRadio permettant d'afficher des boutons radio (P3ter)
[+] Ajout de la fonction plxUtils::sendMailPhpMailer permettant d'envoyer des mails au travers d'un serveur SMTP (P3ter)
[+] #40 Ne pas afficher le meta du site en mode article, static, categorie (Stéphane)
[+] #135 Contextualiser le lien du flux RSS dans le <head> en fonction du mode catégorie, tag, ou autre (bazooka07, P3ter)
[+] #207 Afficher/masquer le chapeau et les tags d'un article dans l'administration en CSS3 au lieu d'utiliser du JS (bazooka07, Stéphane, P3ter)
[+] #215 Mise en avant du lien de l'article en cours de modification dans l'administration (sudwebdesign, P3ter)
[+] #216 Refacto de la fonction plxUtils::printArea() (bazooka07)