@@ -205,8 +205,8 @@ Acesta este un Mel automat, nu este nevoie să răspundă, vă mulțumesc.',
 'L_COMMENT_OFFLINE_BUTTON'									=> 'Ia Offline',
 'L_COMMENT_ANSWER_BUTTON'									=> 'Răspundeţi la acest comentariu',
 'L_COMMENT_UPDATE_BUTTON'									=> 'Update',
-'L_ERR_ANSWER_UNKNOWN_COMMENT'								=> 'Comentariul va încerca să răspundă la nu există sau nu-i	sunt mai !',
-'L_ERR_ANSWER_OFFLINE_COMMENT'								=> 'comentariul este offline, nu	răspunsul !',
+'L_ERR_ANSWER_UNKNOWN_COMMENT'								=> 'Comentariul va încerca să răspundă la nu există sau nu-i sunt mai !',
+'L_ERR_ANSWER_OFFLINE_COMMENT'								=> 'comentariul este offline, nu răspunsul !',
 'L_ERR_COMMENT_UNKNOWN_ARTICLE'								=> 'Articolul solicitat nu exista, sau nu puteti scrie comentarii la acest articol !',
 'L_ERR_CREATING_COMMENT'									=> 'A apărut o eroare în timpul creării comentariu',
 'L_CREATING_COMMENT_SUCCESSFUL'								=> 'Comentariul a fost creat cu succes',
